class/cloud/k8s/yaml/basic/02_dep/pod-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itachi-pod-dp # deployment的名字
spec:
  replicas: 1 # deployment必须指定副本数量
  selector:
    matchLabels:
      app: itachi-pod-dp-label # 选择器匹配的标签
  template:
    metadata:
      labels:
        app: itachi-pod-dp-label # 标签
    spec:
      containers:
      - name: container-1-itachi # 容器的名字, 一个pod内可以有多个容器
        image: vitachi/up_flask  # 容器的镜像
        ports:
        - containerPort: 10080 # 只是一个信息, 类似于Dockerfile的EXPOSE
