class/cloud/k8s/yaml/basic/02_dep/ingress-dp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: itachi-dp-ingress
spec:
  rules:
  - host: itachi-dp.itachi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: itachi-dp-service
          servicePort: 10080
